org.mmisw.vine - Web VINE
Carlos Rueda - MMI / MBARI

ChangeLog

2009-04-06  1.5.0.alpha1
	- Added some (?) tooltips and some "not implemented" actions to proceed with asking
	  for feedback especially regarding UI.
	  
	  Here are some the next steps regarding the core functionality:
	  	- Determine the mapping ontology to use as a basis for all mappings
	  	- Determine the mechanism to allow the creation or configuration of the set of relations
	  	  that can be used in a session.
	  	- Allow registration in the repository. Perhaps this will be similar to voc2rdf, so
	  	  some metadata should be captured.
	  	- Allow read-only display for browsing existing mapping ontologies.
	  	- Allow loading of a local mapping file?
	  	- Allow saving of the current mappings in a local file?
	  	 

2009-04-03  1.5.0.alpha
	- setting up build environment similar to that in org.mmisw.ontmd project:
		version.properties
		AppInfo
		Config
		log4j.xml
	- More layout improvements: using disclosure panels for displaying term info; some 
	  preliminary tests for doing a similar handling in the mappings panel, but this is
	  trickier because it'd be good to keep the alignment of the relation symbols.

2009-04-02 
	- New MappingsPanel with a tabular of the current mappings.
	- Started handling of created mappings (RelationInfo)
	
2009-04-01
	- Resuming with some updates and preparing to show info about select term in the
	  search result panel, and created mappings..
	  
	  
2009-01-06
	- Added new logo.
	- Using SuggestBox to select a vocabulary into the working list.
	- Improved dialog dispatch for selecting and loading a vocabulary into the working list.
	- OntologyInfo: transient code to identify the vocab only on the client side
	- Search now done on selected vocabs; also the loading.gif image is shown as a progress
	  notification while searching.
	- Search: Using List<EntityInfo> as preparation for showing associated information for
	  found entities.