@@ -7,6 +7,7 @@ import java.util.List;
 import org.mmisw.vine.gwt.client.rpc.EntityInfo;
 import org.mmisw.vine.gwt.client.rpc.IndividualInfo;
 import org.mmisw.vine.gwt.client.rpc.OntologyInfo;
+import org.mmisw.vine.gwt.client.rpc.PropValue;
 
 import com.hp.hpl.jena.ontology.OntDocumentManager;
 import com.hp.hpl.jena.ontology.OntModel;
@@ -18,6 +19,8 @@ import com.hp.hpl.jena.query.QueryFactory;
 import com.hp.hpl.jena.query.QuerySolution;
 import com.hp.hpl.jena.query.ResultSet;
 import com.hp.hpl.jena.rdf.model.ModelFactory;
+import com.hp.hpl.jena.rdf.model.RDFNode;
+import com.hp.hpl.jena.rdf.model.Resource;
 
 /**
  * A placeholder for preliminary functionality at the core.
@@ -33,6 +36,12 @@ public class Util {
 		"SELECT ?instance " +
 		"WHERE { ?class rdf:type owl:Class ." +
 		"        ?instance rdf:type ?class . }"
+	;
+	
+	/** Query template to obtain all properties associated with an entity */
+	private static final String PROPS_QUERY_TEMPLATE =
+		"SELECT ?prop ?value " +
+		"WHERE { <{E}> ?prop ?value . }"
 	;
 	
 	public static OntologyInfo getEntities(OntologyInfo ontologyInfo) {
@@ -90,12 +99,67 @@ public class Util {
 					String localName = entityUri.substring(ontologyUri.length());
 					entityInfo.setLocalName(localName);
 					
+					_addProps(entityUri, entityInfo, ontModel);
+					
 					entities.add(entityInfo);
 				}
 			}
 		}
 		
 	}
+	
+	// TODO complete
+	private static void _addProps(String entityUri, EntityInfo entityInfo, OntModel ontModel) {
+		String queryStr = PROPS_QUERY_TEMPLATE.replaceAll("\\{E\\}", entityUri);
+		Query query = QueryFactory.create(queryStr);
+		QueryExecution qe = QueryExecutionFactory.create(query, ontModel);
+		
+		ResultSet results = qe.execSelect();
+		
+		while ( results.hasNext() ) {
+			QuerySolution sol = results.nextSolution();
+			Iterator<?> varNames = sol.varNames();
+			
+			String propName = null, propUri = null;
+			String valueName = null, valueUri = null;
+			
+			while ( varNames.hasNext() ) {
+				String varName = varNames.next().toString();
+				RDFNode rdfNode = sol.get(varName);
+				
+				if ( rdfNode.isAnon() ) {
+					continue;
+				}
+				
+				if ( varName.equals("prop") ) {
+					if ( rdfNode.isResource() ) {
+						Resource r = (Resource) rdfNode;
+						propName = r.getLocalName();
+						propUri = r.getURI();
+					}
+					else {
+						propName = rdfNode.toString();
+					}
+				}
+				else if ( varName.equals("value") ) {
+					if ( rdfNode.isResource() ) {
+						Resource r = (Resource) rdfNode;
+						valueName = r.getLocalName();
+						valueUri = r.getURI();
+					}
+					else {
+						valueName = rdfNode.toString();
+					}
+				}
+			}
+			
+			PropValue pv = new PropValue(propName, propUri, valueName, valueUri);
+			entityInfo.getProps().add(pv);
+		}
+	}
+
+	
+	
 
 	/** see JenaUtil2 */
 	private static final String FRAG_SEPARATOR = "/" ;
