@@ -58,6 +58,15 @@
 }
 
 
+.DisclosureTable {
+  width: 100%
+  font-size: small;
+  background-color: transparent;
+  border-spacing: 0px;
+  border: 1px solid #8cacbb;
+}
+
+
 /* inline tables */
 .MappingsTable {
   width: 100%
